test/valid/56269_ackermann/ackermann.agu
-- Author: 56269, Frederico Prazeres

-- Wilhelm Friedrich Ackermann's function in Aguda

let ack (m, n) : (Int, Int) -> Int =
  if m == 0 
    then n + 1
    else if n == 0 
        then ack(m - 1, 1)
  else 
    ack(m - 1, ack(m, n - 1))

let main(_) : Unit -> Unit =
  print(ack(2, 3))