test/invalid-syntax/58185_missing_parenthesis/missing_parenthesis.agu
-- Author: Eduardo Santos, 58185
-- Syntax error: missing parentheses in function declaration

let add n, m : (Int, Int) -> Int =  
    n + m
    
let main : Unit = print(add(3, 4))